First update of working voice transcription & translation using Google Speech

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Medical Consultation Transcripts",
-  "short_name": "Med. Transcripts",
+  "name": "Medical Transcripts",
+  "short_name": "Medical Transcripts",
   "icons": [
     {
       "src": "/src/icons/app-icon-48x48.png",
