--- a/package.json
+++ b/package.json
@@ -1,18 +1,39 @@
 {
-  "name": "Medical Consultation Transcripts",
+  "name": "Medical Transcripts",
   "version": "1.0.0",
-  "description": "App for recording transcripts of doctor-patient consultations",
-  "main": "index.js",
+  "author": "Anirvan Basu",
+  "license": "Apache-2.0",
+  "description": "Transcript of Doctor-Patient consultations",
+  "keywords": [
+    "streaming voice",
+    "medical transcripts",
+    "translated to English"
+  ],
+  "engines": {
+    "node": "^14.16.0",
+    "yarn": "^1.22.10"
+  },
   "scripts": {
     "test": "npx jest test/e2e.test.js",
-    "start": "npx http-server -c-1"
+    "start": "node public/src/js/simpleserver.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "private": true,
   "dependencies": {
-    "http-server": "^0.12.3",
-    "standard": "^16.0.3"
+    "@google-cloud/media-translation": "^2.2.3",
+    "@google-cloud/speech": "^4.4.0",
+    "@google-cloud/translate": "^6.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
+    "pb-util": "^0.1.2",
+    "recordrtc": "latest",
+    "socket.io": "^2.3.0",
+    "socket.io-stream": "^0.9.1",
+    "standard": "^16.0.3",
+    "stream": "0.0.2",
+    "through2": "^3.0.1",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "eslint-config-standard": "^16.0.2",
